# audiolayers

./: .envrc  .gitattributes  .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  pyproject.toml  pytest.ini  requirements.txt  setup.sh
.github/workflows/: ci.yml
.zsh_completions/: _make_audiolayers
audio/pool/: 15m.cc-ArchivosDeProduccion-FieldRecordings__0067_04_Quenotenemoscasa.flac  OpusMagnus__06__Alpha_Andromedae.flac  SubmarineDiveAlarm__submarine_dive_horn.flac  The_Devils_Dreamworld__05.flac  VaderBreathing__Comeback.flac  WilliamDyerSoundEffectsLibrary__2_gunshots.flac  animalsounds1__01geesehonkfar.flac  bfnsplusue-webfiles__ExampleCharAudioFile.flac  danskherognu_haandvaerker__1.aif  lyberry-vengeance-archive__VPE3__VPE3 Drumkits__VPE3 Cymbals__VPE3 Crash__VPE3 Crash 01.flac  mmm018__01-01-ToysForElliot-ThisIsANationalTape.flac  niuniu__wave__niuniu-20061206-11.flac  soniccdcompleteoststream__SONIC CD OST - Extra Content__12 Unused Loop - Collision Chaos Zone (Good Future).flac
audiolayers/: main.py
audiolayers/audio/: pool.py
audiolayers/core/: fragment_sequence.py  layer_plan.py
audiolayers/engine/: render.py
audiolayers/envelopes/: envelope.py  envelope_builder.py
audiolayers/parameters/: catalog.py  parameter.py  parameter_definitions.py  parser.py
audiolayers/provisioning/: analyzer.py  pool_source.py
audiolayers/strategies/: duration_strategy.py  fragment_envelope.py  overflow_strategy.py  selection_strategy.py
docs/: INDEX.md  manuale.md
scores/: gen_venti_strati.py  stream-crescente.yaml  venti-strati.yaml
src/: main.py
(+74 files in other folders)
